--- a/projects/blog/src/app/views/admin/components/artigos-recentes/artigos-recentes.component.scss
+++ b/projects/blog/src/app/views/admin/components/artigos-recentes/artigos-recentes.component.scss
@@ -19,3 +19,26 @@
   }
 }
 
+
+.gd__ligth {
+  .artigos-recentes {
+    // color: $gd-colorligth-primary-600;
+    // margin: 0;
+  }
+}
+
+.gd__dark {
+    .artigos-recentes {
+      background-color: $gd-colordark-gray-800;
+      color: $gd-color-offwhite;
+    }
+}
+
+.gd__contrast {
+  .artigos-recentes {
+    // color: $gd-colorligth-primary-600;
+    // margin: 0;
+  }
+}
+
+
