--- a/projects/blog/src/app/views/admin/components/box-num-seguidores/box-num-seguidores.component.scss
+++ b/projects/blog/src/app/views/admin/components/box-num-seguidores/box-num-seguidores.component.scss
@@ -1,16 +1,13 @@
-@import "../../../../../../../blog/src/styles/styles.scss";
+@import '../../../../../../../blog/src/styles/styles.scss';
 
 .box-num-seguidores {
-  background-color: $gd-colorligth-primary-50;
-  border: solid 2px $gd-colorligth-primary-600;
-  color: $gd-colorligth-primary-600;
   border-radius: 8px;
   box-sizing: border-box;
   display: grid;
   grid-template-areas:
-    "icone numero"
-    "icone rotulo";
-  padding: .25rem .25rem .5rem .25rem;
+    'icone numero'
+    'icone rotulo';
+  padding: 0.25rem 0.25rem 0.5rem 0.25rem;
 
   &__icone {
     align-self: center;
@@ -30,5 +27,29 @@
     grid-area: rotulo;
     align-self: flex-start;
     justify-self: center;
+  }
+}
+
+.gd__ligth {
+  &.box-num-seguidores {
+    background-color: $gd-colorligth-primary-50;
+    border: solid 2px $gd-colorligth-primary-600;
+    color: $gd-colorligth-primary-600;
+  }
+}
+
+.gd__dark {
+  &.box-num-seguidores {
+    background-color: $gd-colordark-gray-500;
+    border: solid 2px $gd-color-offwhite;
+    color: $gd-color-offwhite;
+  }
+}
+
+.gd__contrast {
+  &.box-num-seguidores {
+    background-color: $gd-colordark-gray-500;
+    border: solid 2px $gd-color-offwhite;
+    color: $gd-color-offwhite;
   }
 }
